Sprint2/styles/main.css
/*
Have at least two CSS rules that update the style or layout of your screens when specific events occur
Support responsive layout
*/

/*
This code is based on: https://www.w3schools.com/css/css3_variables.asp
*/
:root {
    --primary: #172d4f;
    --secondary: #4f98a2;
    --tertiary: rgb(189, 242, 255);
    --quadernary: #ffffff;
}

hr {
    height: 3px;
    background-color: var(--quadernary);
}

body{
    background-color: var(--tertiary);
}

#header {
    background-color: var(--primary);
}

.site-desc {
    color: var(--secondary);
    font-size: 60px;
}

.nav-item .nav-link{
    color: var(--secondary);
}

.nav-item .nav-link.active {
    background-color: var(--secondary);
    color: var(--primary); 
}

.btn {
    background-color: var(--secondary);
    outline-color: var(--secondary);
}


#leadboard_title {
    color: var(--secondary);
    background-color: var(--primary);
    width: 20%;
    width: fit-content;
    height: fit-content;
    padding: 1px 10px;
    border-radius: 10px;
}

#leaderboard_sort_by {
    padding: 10px;
    background-color: var(--primary);
    border-radius: 10px;;
}

#leaderboard_table {
    width: 80%;
    background-clip: padding-box; 
    box-shadow: 0 0 15px var(--primary);
    border-radius: 25px;
}

table {
    border-radius: 25px;
}

#leaderboard_table thead {
    text-align: end;
}

#leaderboard_table tbody th {
    text-align: center;
}

#leaderboard_table tbody td {
    text-align: end;
}

#settings_title {
    color: var(--secondary);
    background-color: var(--primary);
    width: 20%;
    width: fit-content;
    height: fit-content;
    padding: 1px 10px;
    border-radius: 10px;
}

#settings {
    width: 80%;
    height: 500px;
    padding: 10px;
    background-clip: padding-box; 
    box-shadow: 0 0 15px var(--primary);
    background-color: var(--secondary);
    border-radius: 25px;
}

#profile {
    height: 500px;
    padding: 10px;
    background-clip: padding-box; 
    box-shadow: 0 0 15px var(--primary);
    background-color: var(--secondary);
    border-radius: 25px;
    
    width: 95%;
    margin: 0 auto;
}

@media (min-width: 992px) {
    #profile {
        width: 40%;
    }

}

.change_info {
    padding: 12px;
    background-color: var(--primary);
    border-radius: 15px;
}

.scrollable-content {
    height: 240px;
    overflow-y: auto;
    padding: 10px;
    border: 1px solid #ddd;
    background-color: #f8f9fa;
}

#profile-icon {
    width: 50px;
    height: 50px;
    background-color: #ccc;
    border-radius: 10%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    color: white;
    cursor: pointer;
}

@media (min-width: 768px) {
    #profile-icon {
        position: fixed;
        top: 10px;
        right: 10px;
    }
}

@media (max-width: 767px) {
    #profile-icon {
        position: fixed;
        top: 90px;
        left: 80%;
        transform: translateX(-50%);
    }
}

